<resources>
    <string name="app_name">Maison Connectée</string>

    <!-- Home page -->
    <string name="homeLumiere">Lumière</string>
    <string name="homeStores">Stores</string>
    <string name="homeChauffage">Chauffage</string>

    <!-- Stores -->
    <string name="storeCourant">Stores pièce courante</string>
    <string name="storeGeneral">Stores toutes les pièces</string>

    <!-- Lumière -->
    <string name="lumiereCourant">Lumières pièce courante</string>
    <string name="lumiereGenerale">Lumières générales</string>

    <!-- Chauffage -->
    <string name="title_activity_chauffage">Gestion chauffage</string>
    <string name="chauffagePieceAVivre">Chauffage des pièces à vivre</string>
    <string name="chauffageChambres">Chauffage des chambres</string>


    <string name="title_activity_time_picker">Chauffage pièces à vivre : paramètres</string>
    <string name="chauffageJournee">Journée</string>
    <string name="chauffageSoiree">Soirée</string>
    <string name="chauffageNuit">Nuit</string>

    <string name="chauffageCelsius">°C</string>

    <string name="chauffageDe">De : </string>
    <string name="chauffageA">À : </string>


    <string name="title_activity_time_picker2">Chauffage chambres : paramètres</string>

</resources>
